--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>ru.bengobro</groupId>
 	<artifactId>dispathcer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>intelligence-cup</name>
+	<name>intelligenc5e-cup</name>
 	<description>intelligence-cup</description>
 
 	<properties>
@@ -33,11 +33,6 @@
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.12</version>
-		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
